# liquidator-servant

./: .gitignore  .hlint.yaml  .travis.yml  Api.hs  CHANGELOG.md  Makefile  README.org  cabal  cabal.project  dev-server.sh  liquidator-redux-package.nix  liquidator-servant.cabal  release.nix  serve.hs  shell.nix  swagger.hs
app/: serve.hs
liquidator-api/: liquidator-api.cabal
liquidator-api/app/: swagger.hs
liquidator-api/src/Liquidator/: Api.hs  Schema.hs  SchemaTH.hs
liquidator-api/src/Liquidator/Schema/: Balance.hs  BankBalance.hs  Company.hs  Month.hs  Pagination.hs  RecurringTransaction.hs  Transaction.hs  TransactionTemplate.hs  Types.hs  User.hs  UserCompanyRelation.hs  UserKeys.hs
liquidator-api/test/Liquidator/: SchemaSpec.hs
liquidator-client/: liquidator-client.cabal
liquidator-client/app/: client.hs
liquidator-client/src/Liquidator/: Client.hs
liquidator-redux/: .gitignore  liquidator-redux.cabal  package.yaml  package.yml
liquidator-redux/app/: server.hs  web-front-server.hs
liquidator-redux/cruft-src/: LiquidatorSecure.hs  SavedState.hs  WebFront.hs
liquidator-redux/cruft-src/WebFront/Views/: IndexPage.hs  SimplePage.hs
liquidator-redux/src/: Api.hs  ApiOld.hs  DesignDoc.hs  Html.hs  IORef.hs  IdSupply.hs  Imports.hs  Instances.hs  Lens.hs  Liquidator.hs  Money.hs  Util.hs  UuidGen.hs  WebFront.hs
liquidator-redux/src/Liquidator/: Api.hs  HttpServer.hs  Types.hs
liquidator-redux/src/Liquidator/Web/: Api.hs  Server.hs  Types.hs  Views.hs
liquidator-redux/src/Liquidator/WebFront/: Api.hs  Server.hs  Types.hs  Views.hs
liquidator-redux/src/Wai/Middleware/: Hsts.hs  VerifyCsrToken.hs
liquidator-redux/src/WebFront/Views/: CounterPage.hs  NotFoundPage.hs  Template.hs
liquidator-redux/test/: Instances.hs  LiquidatorSpec.hs  MoneySpec.hs  SpecInstances.hs  doctests.hs
liquidator-redux/test/spec/: IORefSpec.hs  LiquidatorSpec.hs  MoneySpec.hs
liquidator-redux/test/spec/Spec/: Instances.hs
liquidator-server/: liquidator-server.cabal
liquidator-server/app/: server.hs
liquidator-server/src/Liquidator/: Server.hs
liquidator-web-ui/: default.nix  package.yaml
scripts/: apicalls.sh  authapicalls.sh  cabal-build.sh  cabal-repl.sh  gencert.sh  simple-httpd.sh  stress.sh  testapicalls.sh  travis-build.sh
src/: Api.hs  Schema.hs  Server.hs
