name:                liquidator-api
version:             0.1.0.0
license:             AGPL-3
--license-file:        LICENSE
author:              Joachim Fasting
maintainer:          joachifm@fastmail.fm
build-type:          Simple
--extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

library
  exposed-modules:     Liquidator.Api
                     , Liquidator.Schema
  build-depends:       base >=4.12 && <4.13
                     , bytestring >=0.10.8 && <1
                     , text >=1.2.3.1 && <2
                     , QuickCheck
                     , aeson >=1.4.4.0 && <2
                     , generic-arbitrary
                     , lens
                     , servant >=0.16.1 && <1
                     , servant-server
                     , servant-swagger
                     , swagger2
  hs-source-dirs:      src
  default-language:    Haskell2010

executable liquidator-swagger
  main-is:             swagger.hs
  build-depends:       base >=4.12 && <4.13
                     , bytestring
                     -- Local deps
                     , liquidator-api
                     -- Component specific dependencies
                     , aeson-pretty
  hs-source-dirs:      app
  default-language:    Haskell2010
