name:                liquidator-api
version:             0.1.0.0
license:             AGPL-3
--license-file:        LICENSE
author:              Joachim Fasting
maintainer:          joachifm@fastmail.fm
build-type:          Simple
--extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

library
  exposed-modules:     Liquidator.Api
                     , Liquidator.Schema
                     , Liquidator.Schema.Balance
                     , Liquidator.Schema.BankBalance
                     , Liquidator.Schema.Company
                     , Liquidator.Schema.Month
                     , Liquidator.Schema.Pagination
                     , Liquidator.Schema.RecurringTransaction
                     , Liquidator.Schema.Transaction
                     , Liquidator.Schema.TransactionTemplate
                     , Liquidator.Schema.Types
                     , Liquidator.Schema.User
                     , Liquidator.Schema.UserCompanyRelation
                     , Liquidator.Schema.UserKeys
  other-modules:       Liquidator.SchemaTH
  build-depends:       base >=4.12 && <4.13
                     , bytestring >=0.10.8 && <1
                     , text >=1.2.3.1 && <2
                     , template-haskell >=2.14 && <3
                     , QuickCheck >=2.13.1 && <3
                     , aeson >=1.4.4.0 && <2
                     , generic-arbitrary >=0.1 && <1
                     , http-api-data >=0.4.1 && <1
                     , lens >=4.17.1 && <4.18
                     , servant >=0.16.1 && <1
                     , servant-server >=0.16.1 && <1
                     , servant-swagger >=1.1.7 && <2
                     , swagger2 >=2.4 && <3
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Werror
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wpartial-fields
                       -Wmissing-home-modules
                       -Werror=missing-home-modules
                       -Widentities
                       -Wredundant-constraints
                       -Wall-missed-specialisations

executable liquidator-swagger
  main-is:             swagger.hs
  build-depends:       base >=4.12 && <4.13
                     , bytestring >=0.10.8 && <1
                     -- Local deps
                     , liquidator-api
                     -- Component specific dependencies
                     , aeson-pretty >=0.8.7 && <1
  hs-source-dirs:      app
  default-language:    Haskell2010

test-suite liquidator-api-spec
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  other-modules:       Liquidator.SchemaSpec
  build-depends:       base >=4.12 && <4.13
                     , QuickCheck >=2.13.1 && <3
                     , hspec
                     , aeson >=1.4.4.0 && <2
                     -- Local deps
                     , liquidator-api
  build-tool-depends:  hspec-discover:hspec-discover == 2.*
  hs-source-dirs:      test
  default-language:    Haskell2010
