name:                liquidator-redux
version:             0.1.0.0
license:             AGPL-3
author:              Joachim Fasting
maintainer:          joachifm@fastmail.fm
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Liquidator
  build-depends:       base
                     , bytestring
                     , containers
                     , mtl
                     , text
                     , time

                     , lens

                     , jose

                     , aeson
                     , http-api-data

                     , lucid
                     , servant-lucid

                     , servant-swagger
                     , swagger2

                     , servant
                     , servant-server

                     , wai
                     , wai-extra

                     , warp
                     , warp-tls
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wpartial-fields
                       -Wmissing-home-modules
                       -Werror=missing-home-modules
                       -Widentities
                       -Wredundant-constraints
                       -Wall-missed-specialisations

test-suite spec
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  other-modules:       LiquidatorSpec
  hs-source-dirs:      test
  build-depends:       base
                     , bytestring
                     , text

                     , QuickCheck
                     , hspec

                     , liquidator-redux
  default-language:    Haskell2010
  ghc-options:         -Wall
