name:                liquidator-redux
version:             0.1.0.0
license:             AGPL-3
author:              Joachim Fasting
maintainer:          joachifm@fastmail.fm
build-type:          Simple
cabal-version:       >=1.10

library
  default-language:    Haskell2010

  exposed-modules:     Liquidator
                     , Money
                     , Api
  build-depends:       base
                     , bytestring
                     , containers
                     , mtl
                     , text
                     , time

                     , lens

                     , aeson
                     , aeson-casing
                     , http-api-data

                     , jose
                     , servant-auth
                     , servant-auth-server

                     , lucid
                     , servant-lucid

                     , servant-swagger
                     , swagger2

                     , servant
                     , servant-server

                     , wai
                     , wai-extra

                     , warp
                     , warp-tls

  hs-source-dirs:      src

  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wpartial-fields
                       -Wmissing-home-modules
                       -Werror=missing-home-modules
                       -Widentities
                       -Wredundant-constraints
                       -Wall-missed-specialisations

test-suite spec
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010

  main-is:             Spec.hs
  hs-source-dirs:      test

  other-modules:       LiquidatorSpec
                     , MoneySpec

  build-depends:       base
                     , bytestring
                     , text

                     -- Common
                     , aeson

                     -- Test
                     , QuickCheck
                     , hspec

                     -- Local
                     , liquidator-redux

  ghc-options:         -threaded -rtsopts

-- test-suite doctests
--   type:          exitcode-stdio-1.0
--   default-language:    Haskell2010
--   ghc-options:   -threaded -rtsopts
--   main-is:       doctests.hs
--   hs-source-dirs: test
--   build-depends: base, doctest
