name:                liquidator-server
version:             0.1.0.0
license:             AGPL-3
--license-file:        LICENSE
author:              Joachim Fasting
maintainer:          joachifm@fastmail.fm
build-type:          Simple
--extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

library
  exposed-modules:     Liquidator.Server
  build-depends:       base >=4.12 && <4.13
                     , containers
                     , mtl
                     , servant
                     , servant-server

                     -- Local
                     , liquidator-api
  hs-source-dirs:      src
  default-language:    Haskell2010

executable liquidator-server
  main-is:             server.hs
  build-depends:       base >=4.12 && <4.13
                     , bytestring
                     , servant-server

                     -- Local
                     , liquidator-server

                     -- Component specific
                     , aeson
                     , aeson-pretty
                     , optparse-applicative
                     , warp
  ghc-options:         -rtsopts -threaded "-with-rtsopts=-N"
  hs-source-dirs:      app
  default-language:    Haskell2010
